<resources>
    <string name="app_name">vestband</string>
    <string name="app_no_data">no_data</string>

    <string name="login_login">LOG IN</string>
    <string name="login_register">REGISTER</string>
    <string name="login_main_bot_register">회원가입</string>
    <string name="login_main_bot_login">로그인</string>
    <string name="login_login_id">이메일</string>
    <string name="login_login_id_hint">address@email.com</string>
    <string name="login_login_pw">비밀번호</string>
    <string name="login_login_pw_hint">비밀번호를 입력해 주세요</string>
    <string name="login_login_find">비밀번호 찾기</string>
    <string name="login_login_done">로그인</string>

    <string name="register_id">이메일</string>
    <string name="register_id_hint">address@email.com</string>
    <string name="register_pw">비밀번호</string>
    <string name="register_name">이름</string>
    <string name="register_name_hint">이름</string>
    <string name="register_pw_hint">최소 8자리 이상</string>
    <string name="register_pw2_hint">비밀번호 확인</string>
    <string name="register_sex_male">남자</string>
    <string name="register_sex_female">여자</string>
    <string name="register_birth">생년월일</string>
    <string name="register_birth_hint">생년월일 선택하기</string>
    <string name="register_agree">Spine up 회원 약관과 개인정보\n제공에 대해 동의합니다.</string>
    <string name="register_done">회원가입</string>

    <string name="pwsearch_title">비밀번호를 잊으셨나요?</string>
    <string name="pwsearch_text">가입시 사용한 이메일을 입력해 주세요.\n비밀번호 안내 메일을 발송합니다.</string>
    <string name="pwsearch_email">이메일</string>
    <string name="pwsearch_email_hint">address@email.com</string>
    <string name="pwsearch_send">전송</string>

    <string name="initial_first_title">Spine Up 등록하기 전 주의사항</string>
    <string name="initial_first_text">Spine Up를 본격적으로 등록하기 전에\n아래 내용들을 확인해 주세요.</string>
    <string name="initial_first_check1">Spine Up 전원이 켜져 있나요?</string>
    <string name="initial_first_check2">스마트폰의 블루투스 설정이 켜져 있나요?</string>
    <string name="initial_first_button">준비됐어요.</string>
    <string name="initial_second_title">Spine Up 연결하기</string>
    <string name="initial_second_text">Spine Up을 찾았습니다.</string>
    <string name="initial_second_text2">앱과 Spine Up를 연결하기 위해\nSpine Up의 전원버튼을\n더블 클릭해 주세요.</string>
    <string name="initial_second_button">Spine Up을 검색중 입니다.</string>
    <string name="initial_second_button2">연결중 입니다.</string>
    <string name="initial_second_button3">기기 설정하기</string>
    <string name="initial_third_title">바른 자세 설정하기</string>
    <string name="initial_third_text">바른 자세를 설정해 주세요.</string>
    <string name="initial_third_text2">스마트폰을 눈높이로 들고 목과 허리를\n최대한 바르게 펴신 후, 다음을 눌러주세요.</string>
    <string name="initial_third_button">다음</string>
    <string name="initial_fourth_title">나쁜 자세 설정하기</string>
    <string name="initial_fourth_text">진동 알림을 받고 싶은 자세를 설정해 주세요</string>
    <string name="initial_fourth_text2">진동 알림을 받고 싶은 나쁜 자세를\n취하시고 다음을 눌러주세요</string>
    <string name="initial_fourth_button">다음</string>
    <string name="initial_fifth_title">나쁜 자세 알림주기 설정하기</string>
    <string name="initial_fifth_text">진동 알림을 받고 싶은 시간을 설정해 주세요</string>
    <string name="initial_fifth_button">다음</string>

    <string name="main_dashboard_title">Today</string>
    <string name="main_dashboard_chart_title">당신의 자세는</string>
    <string name="main_dashboard_chart_no_data">No Data</string>
    <string name="main_dashboard_total_title">총 착용시간</string>
    <string name="main_dashboard_total_content">0시간 0분</string>
    <string name="main_dashboard_vibrate_content">0회</string>
    <string name="main_dashboard_vibrate_title">진동횟수</string>
    <string name="main_dashboard_analisys_title">자세분석  ></string>
    <string name="main_dashboard_stretch_title">교정운동  ></string>
    <string name="main_analisys_top_title">일일 자세 리포트</string>
    <string name="main_analisys_top_date">2019&#8211;01&#8211;01 ~ 2019&#8211;01&#8211;01</string>
    <string name="main_analisys_time_title">착용시간</string>
    <string name="main_analisys_time_default">0분</string>
    <string name="main_analisys_vibrate_default">0회</string>
    <string name="main_analisys_vibrate_title">진동횟수</string>
    <string name="main_analisys_right_title">바른 자세</string>
    <string name="main_analisys_right_default">0분</string>
    <string name="main_analisys_bad_default">0분</string>
    <string name="main_analisys_bad_title">나쁜 자세</string>
    <string name="main_stretch_top_title">Spine Up과 운동하기</string>
    <string name="main_stretch_top_text">Spine Up과 함께 운동하세요</string>
    <string name="main_stretch_top_text2">회원님의 건강을 위해\n자세교정운동을 권해드립니다.</string>
    <string name="main_stretch_neck1">목운동_전후 3분</string>
    <string name="main_stretch_neck2">목운동_좌우 3분</string>
    <string name="main_stretch_back1">등배 운동_전후 3분</string>
    <string name="main_stretch_back2">옆구리운동_좌우 3분</string>
    <string name="main_setting_top_title">나의 계정</string>
    <string name="main_setting_top_connect_state_disconnected">연결 안됨</string>
    <string name="main_setting_set_title">설정하기</string>
    <string name="main_setting_set_notify">진동 알림 설정</string>
    <string name="main_setting_set_posture">기준자세 등록</string>
    <string name="main_setting_my_title">내 정보</string>
    <string name="main_setting_my_profile">프로필</string>
    <string name="main_setting_my_version">앱 버전</string>
    <string name="main_setting_my_notice">공지사항</string>
    <string name="main_setting_connect_top_title">Spine Up 연결상태</string>
    <string name="main_setting_connect_title">나의 Spine Up 정보</string>
    <string name="main_setting_connect_state_disconnected">연결 안됨</string>
    <string name="main_setting_connect_state">상태</string>
    <string name="main_setting_connect_battery">배터리</string>
    <string name="main_setting_connect_battery_default">0%</string>
    <string name="main_setting_connect_firmware">펌웨어 버전</string>
    <string name="main_setting_connect_firmware_default">v1.0</string>
    <string name="main_setting_notify_top_title">진동 알림 설정</string>
    <string name="main_setting_notify_time_title">알림 시간 설정</string>
    <string name="main_setting_notify_time_default">즉시 &gt;</string>
    <string name="main_setting_notify_right">바른 자세 설정</string>
    <string name="main_setting_notify_notify_right_default">0도</string>
    <string name="main_setting_notify_bad_title">나쁜 자세 설정</string>
    <string name="main_setting_notify_bad_default">15도</string>
    <string name="main_setting_profile_top_title">프로필</string>
    <string name="main_setting_profile_email">이메일</string>
    <string name="main_setting_profile_name">이름</string>
    <string name="main_setting_profile_sex">성별</string>
    <string name="main_setting_profile_birth">생년월일</string>
    <string name="main_setting_profile_register">회원가입일</string>
    <string name="main_setting_profile_logout">로그아웃</string>
    <string name="main_setting_profile_withdrawal">회원탈퇴</string>
    <string name="main_setting_version_top_title">앱 버전</string>
    <string name="main_setting_version_upgrade">최신버전으로 업그레이드 하기</string>
    <string name="main_setting_version_current">현재버전</string>
    <string name="main_setting_version_latest">최신버전</string>
</resources>
