<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/app_wordmark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/app_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="30dp"
            android:text="@string/register_id"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/register_id"
            android:imeOptions="actionDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/register_id_hint"
            android:textColorHint="@color/colorWhiteDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/app_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="30dp"
            android:text="@string/register_name"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/register_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:background="@null"
            android:hint="@string/register_name_hint"
            android:textColorHint="@color/colorWhiteDark"
            android:textSize="18sp" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/app_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="30dp"
            android:text="@string/register_pw"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/register_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:background="@null"
            android:hint="@string/register_pw_hint"
            android:textColorHint="@color/colorWhiteDark"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/app_edittext"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp"
            android:paddingRight="30dp"
            android:text="@string/register_pw"
            android:textSize="18sp"
            tools:ignore="RtlHardcoded" />

        <EditText
            android:id="@+id/register_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:background="@null"
            android:hint="@string/register_check_hint"
            android:textColorHint="@color/colorWhiteDark"
            android:textSize="18sp" />
    </LinearLayout>

    <Button
        android:id="@+id/login_login_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:text="@string/login_login_find"
        android:textColor="@color/colorGray"
        android:textSize="16sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/login_login_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/app_button"
        android:text="@string/login_login_done"
        android:textColor="@color/colorWhite"
        android:textSize="18sp" />
</LinearLayout>